--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -59,7 +59,7 @@ margin-bottom: 10vh;
 .swiper-slide {
    width: 100%;
    height: 62vh;
-   overflow-y: scroll;
+   overflow-y: auto;
    padding: 0 10%;
    font-family: $font-main;
 }
